--- a/src/01-estruturas-de-dados.ipynb
+++ b/src/01-estruturas-de-dados.ipynb
@@ -31,7 +31,9 @@
    "id": "2a0d81a0",
    "metadata": {},
    "source": [
-    "# escalas de big o"
+    "# escalas de big o\n",
+    "\n",
+    "<img src=\"./assets/image.png\" width=\"420\" />"
    ]
   },
   {
@@ -42,12 +44,10 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "o(1): constante\n",
+    "o(1): escala constante\n",
     "\n",
     "independente do tamanho do input, a complexidade é igual.\n",
     "'''\n",
-    "\n",
-    "import random\n",
     "\n",
     "# essa função sempre o primeiro item da lista;\n",
     "# logo a complexidade temporal dela é o(1), já que é fixa a posição de acesso ao array.\n",
@@ -65,15 +65,55 @@
     "# a complexidade espacial continua sendo linear, já que independe do input.\n",
     "def o_1_espacial_2(li: list[int]) -> tuple[int, int, int]:\n",
     "    li = sorted(li, reverse=True)\n",
-    "    print(li)\n",
     "\n",
-    "    return (li[0], li[1], li[2])\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "o_1_espacial_2([random.randint(0, 100) for _ in range(100)])"
+    "    return (li[0], li[1], li[2])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "ee6de590",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.321928094887362\n",
+      "4.321928094887363\n",
+      "5.321928094887363\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "'''\n",
+    "o(log N): escala logarítmica\n",
+    "\n",
+    "conforme você aumenta o input exponencialmente (dobra), a complexidade aumenta linearmente.\n",
+    "\n",
+    "por exemplo:\n",
+    "- log2(10) -> 3.32\n",
+    "- log2(20) -> 4.32\n",
+    "- log2(40) -> 5.32\n",
+    "\n",
+    "binary search é um exemplo dessa escala\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "print(math.log2(10))\n",
+    "print(math.log2(20))\n",
+    "print(math.log2(40))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c52bcd2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
