--- a/src/01-estruturas-de-dados/__.ipynb
+++ b/src/01-estruturas-de-dados/__.ipynb
@@ -33,12 +33,12 @@
    "source": [
     "# escalas de big o\n",
     "\n",
-    "<img src=\"./assets/image.png\" width=\"420\" />"
+    "<img src=\"./big-o-notation.png\" width=\"420\" />"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b58c0421",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "id": "ee6de590",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lnng",
+   "display_name": "pydsa",
    "language": "python",
    "name": "python3"
   },
